# Magpie

./: .env.example  .gitignore  README.md  pyproject.toml
magpie/: __main__.py  config.py
magpie/utils/: __init__.py  command.py
